--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,13 @@ services:
     environment:
       - "ROS_HOSTNAME=$ROS_IP"
       - "ROS_MASTER_URI=http://$ROS_IP:11311"
+    command: ["roslaunch", "/pan_tilt.launch", "d435_mesh_file:=${PWD}/rviz/d435.dae"]
 
+  realsense:
+    image: iory/docker-ros-d415
+    container_name: realsense
+    privileged: true
+    environment:
+      - "ROS_HOSTNAME=$ROS_IP"
+      - "ROS_MASTER_URI=http://$ROS_IP:11311"
+    command: roslaunch realsense2_camera rs_rgbd.launch
