--- a/dynamixel_controller/Dockerfile
+++ b/dynamixel_controller/Dockerfile
@@ -5,11 +5,19 @@ RUN apt-get update && apt-get install -y \
     ros-kinetic-robot-state-publisher \
     ros-kinetic-dynamixel-controllers \
     ros-kinetic-xacro \
-    && rm -rf /var/lib/apt/lists/
+    && rm -rf /var/lib/apt/lists/*
 COPY ./pan_tilt.launch /
 COPY ./dynamixel_joint_state_publisher.py /opt/ros/kinetic/lib/robot_state_publisher
 COPY ./urdf /urdf
-COPY ./entrypoint.sh /
 
+# to resolve *.local hostname
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    avahi-daemon \
+    libnss-mdns \
+    && rm -rf /var/lib/apt/lists/* \
+    && sed -i -e 's/#enable-dbus=yes/enable-dbus=no/g' /etc/avahi/avahi-daemon.conf 
+
+COPY ./entrypoint.sh /
 ENTRYPOINT ["/entrypoint.sh"]
+
 CMD ["roslaunch", "/pan_tilt.launch"]
