--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,7 @@
 <package format="3">
   <name>dynamixel_pantilt</name>
   <version>0.0.0</version>
+  <license>TODO</license>
   <description>
     Pan-tilt camera controller
   </description>
