--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(dynamixel_pantilt)
 find_package(ament_cmake REQUIRED)
 
 install(PROGRAMS
+  nodes/camera_image_publisher.py
   nodes/dynamixel_joint_state_publisher.py
   DESTINATION lib/${PROJECT_NAME}
 )
