--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,7 @@
   <author>Hiroki Yokoyama</author>
 
   <exec_depend>dynamixel_controllers</exec_depend>
+  <exec_depend>usb_camera_driver</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   
   <export>
